# metafor

./: .gitignore  LICENSE  README.md  pyproject.toml
metafor/: main.py
metafor/analysis/: analyzer.py  experiment.py  multi_server_ctmc_analysis.py  single_server_ctmc_analysis.py  single_server_experiment.py  visualize.py
metafor/analysis/ctmc_experiments/: experiment.py  multi_server_ctmc_analysis.py  single_server_ctmc_analysis.py  visualize.py
metafor/analysis/koopman_experiments/: README.md  compare_simulations.py  exp_mixing_time_learned.py  exp_mixing_time_learned_all.py  exp_mixing_time_simulation.py  visualize_KAE.py
metafor/analysis/multi_server/: latency_finite_time_experiment.py
metafor/analysis/single_server/: latency_experiment.py  latency_finite_time_experiment.py
metafor/ctmc_model/: ctmc.py
metafor/ctmc_model/multi_server/: ctmc.py
metafor/ctmc_model/single_server/: ctmc.py  ctmc_calibration.py
metafor/data_generation/: README.md  data_generator.py  data_generator_multi.py  data_visualization.py  generate_pkl_files.py
metafor/dsl/: dsl.py  test.py
metafor/examples/: .nfs000000000001944d000003c0  full_example.py  gen_plot.sh  plot_data.py  plot_pickle.py  plot_pkl.py  visualize_KAE.py
metafor/koopman_AE_model/: README.md  train.py
metafor/learning/: Client.py  README.md  ctmc_calibration.py  data_generator.py  exp_clustering.py  exp_mixing_time.py  exp_mixing_time_learned.py  exp_mixing_time_learned_multi.py  exp_mixing_time_simulation.py  koopman_settling_time.py  learning_from_simulation_data.py  learning_from_simulation_data_pretrain_dmd.py  learning_from_simulation_stochastic.py  learning_stochastic.py  o_seq.pkl  plot.py  plot_predictions.py  q_seq.pkl  simulate.py  train.py  viz_latent.py
metafor/learning/data_generation/: .nfs00000000000153d700000859  .nfs00000000000167940000085c  .nfs00000000000167a10000085d  .nfs0000000000018d020000085b  data_generator.py  data_generator_multi.py  data_preprocess.py  generate_pkl_files.py  generate_pkl_files_multi.py  load_pickle.py  load_pickle_multi.py  o_seq.pkl  plot_eval.py  plot_longer_sim.py  plot_pickle.py  plot_retries.py  plot_throttling.py  plot_vs_stack.py  q_seq.pkl  q_vs_s.py  simulate.py
metafor/learning/simulator/: Server.py  Statistics.py  data_generator.py  simulate.py
metafor/learning/utils/: compare_original_latent.py  exp_clustering.py  exp_mixing_time_learned.py  exp_mixing_time_learned_multi.py  exp_mixing_time_simulation.py  koopman_settling_time.py  load_pickle.py  load_pickle_multi.py  plot_correlation.py  plot_pickle.py  plot_predictions.py  plot_predictions_short.py  plot_throttling.py  plot_vs_stack.py
metafor/learning_wip/: README.md  learning_autoencoder_model.py  learning_from_simulation_stochastic.py  learning_linear_model.py
metafor/learning_wip/data_generation/: 100_exp_results.csv  10_exp_results.csv  11_exp_results.csv  12_exp_results.csv  13_exp_results.csv  14_exp_results.csv  15_exp_results.csv  16_exp_results.csv  17_exp_results.csv  18_exp_results.csv  19_exp_results.csv  1_exp_results.csv  20_exp_results.csv  21_exp_results.csv  22_exp_results.csv  23_exp_results.csv  24_exp_results.csv  25_exp_results.csv  26_exp_results.csv  27_exp_results.csv  28_exp_results.csv  29_exp_results.csv  2_exp_results.csv  30_exp_results.csv  31_exp_results.csv  32_exp_results.csv  33_exp_results.csv  34_exp_results.csv  35_exp_results.csv  (+79 more)
metafor/model/: ctmc.py  ctmc_parameters.py
metafor/simulator/: __init__.py  client.py  client_multi.py  job.py  plot.R  preprocessing.py  server.py  server_multi.py  server_with_LIFO.py  server_with_throttling.py  simulate.py  simulate_multi.py
metafor/utils/: calculate.py  graph.py  plot.py  plot_parameters.py
metaphor/: main.py
metaphor/dsl/: dsl.py
metaphor/simulator/: client.py  simulate.py
metaphor/utils/: calculate.py
temp/data_generation/: data_generator.py  data_generator_multi.py  generate_pkl_files_multi.py
temp/dsl/: dsl.py  test.py
temp/koopman_AE_model/: train.py
temp/simulator/: __init__.py  client.py  client_multi.py  server.py  server_multi.py  server_with_LIFO.py  simulate.py  statistics.py
temp/utils/: graph.py  plot.py
tests/: single_server_example.ipynb
(+33 files in other folders)
